@@ -33,15 +33,15 @@ __DYNAMIC  =  0;
 /*
  * Declare some sizes.
  */
-_RamBase = DEFINED(_RamBase) ? _RamBase : 0x03000;
-_RamSize = DEFINED(_RamSize) ? _RamSize : 0x7d000;
+_RamBase = DEFINED(_RamBase) ? _RamBase : 0x10000;
+_RamSize = DEFINED(_RamSize) ? _RamSize : 0x70000;
 _RamEnd = _RamBase + _RamSize;
 _HeapSize = DEFINED(_HeapSize) ? _HeapSize : 0x10000;
 _StackSize = DEFINED(_StackSize) ? _StackSize : 0x2000;
 
 MEMORY
 {
-  ram     : ORIGIN = 0x03000, LENGTH = 0x7d000
+  ram     : ORIGIN = 0x10000, LENGTH = 0x70000
 }
 
 _copy_data_from_rom = 0;
@@ -89,6 +89,16 @@ SECTIONS
 		*crti.o(.fini)
 		*(.fini)
 		*crtn.o(.fini)
+
+		/*
+		 * Special FreeBSD sysctl sections.
+		 */
+		. = ALIGN (16);
+		__start_set_sysctl_set = .;
+		*(set_sysctl_*);
+		__stop_set_sysctl_set = ABSOLUTE(.);
+		*(set_domain_*);
+		*(set_pseudo_*);
 
 		/*
 		 * C++ constructors/destructors
@@ -143,7 +153,6 @@ SECTIONS
                 *(COMMON)
                 . = ALIGN (16);
                 PROVIDE (end = .);
-
                 . += _StackSize;
                 . = ALIGN (16);
                 _stack_init = .;
